Tried to fix css bug causing flexbox to break on iOS. I honestly don't even understand why this isn't working. I can't replicate the reported issue on anything other than an iPhone. Even the same version of Chrome on other devices works fine. I don't understand why anyone would ever want to be a front-end dev. I'm going to write some Python now.

--- a/myblog/home/static/home/css/home.css
+++ b/myblog/home/static/home/css/home.css
@@ -88,7 +88,6 @@ Change color of gradient to match color scheme of site
 }
 
 .jumbotron {
-    position: relative;
     height: calc(90vh - 50px);
     width: 100%;
     max-height: 710px;
