--- a/myblog/home/static/home/css/index.css
+++ b/myblog/home/static/home/css/index.css
@@ -7,29 +7,18 @@ nav.navbar.navbar-default {
 }
 
 .jumbotron {
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */
+    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */         /* OLD - Firefox 19- (buggy but mostly works) */
+    display: -ms-flexbox;      /* TWEENER - IE 10 */     /* NEW - Chrome */
     display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
-    padding-bottom: 0;
-    padding-top: 0;
 }
 
 .jumbotron-home {
-    position: absolute;
-    display: -webkit-box;      /* OLD - iOS 6-, Safari 3.1-6 */
-    display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
-    display: -ms-flexbox;      /* TWEENER - IE 10 */
-    display: -webkit-flex;     /* NEW - Chrome */
-    display: flex;             /* NEW, Spec - Opera 12.1, Firefox 20+ */
-    flex-flow: column;
-    justify-content: center;
-    align-items: center;
-    padding-left: 10%;
-    padding-right: 10%;
     text-align: center;
 }
 
@@ -43,10 +32,10 @@ nav.navbar.navbar-default {
 }
 
 .jumbotron-home a {
-    background-color: rgba(108, 31, 43, 1);
+    background-color: rgba(108, 31, 43, .94);
     font-family: 'Ubuntu';
     font-weight: 600;
-    font-size: 120%;
+    font-size: 1.2em;
     color: #dadada;
     word-spacing: 1px;
     padding: 15px 30px;
@@ -54,25 +43,38 @@ nav.navbar.navbar-default {
     box-shadow: 8px 8px 14px #000;
     position: relative;
     top: 15px;
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
 }
 
 .jumbotron-home a:hover {
     text-decoration: none;
+    background-color: rgb(108, 31, 43)
 }
 
 .index-container {
     width: 100%;
     min-height: 600px;
     margin-top: 0px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 
 .index-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: space-around;
-    align-items: center;
+    -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     width: 95%;
     max-width: 1080px;
     margin-left: auto;
@@ -84,15 +86,21 @@ nav.navbar.navbar-default {
 .index-container .logo-container {
     max-height: 100%;
     max-width: 380px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
 }
 
 .index-container .index-logo {
     max-height: 160px;
     margin: 20px;
     -webkit-filter: drop-shadow(0px 0px 7px rgba(50, 50, 50, .6));
+    filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur in="SourceAlpha" stdDeviation="7" /><feOffset dx="1" dy="1" result="offsetblur" /><feFlood flood-color="rgba(50,50,50,0.6)" /><feComposite in2="offsetblur" operator="in" /><feMerge><feMergeNode /><feMergeNode in="SourceGraphic" /></feMerge></filter></svg>#filter');
     filter:         drop-shadow(0px 0px 7px rgba(50, 50, 50, .6));
 }
 
@@ -122,7 +130,8 @@ nav.navbar.navbar-default {
 }
 
 #html-css-javascript {
-    flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+        flex-flow: row wrap;
     background: rgba(38, 91, 142, 1);
     color: #dadada;
 }
